frameworks/react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: myapp
  labels:
    app: react
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: react
